# sphinx-sqlalchemy

./: .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: tests.yml
docs/: conf.py  index.rst
docs/example/: __init__.py  models.py
sphinx_sqlalchemy/: __init__.py  main.py
tests/: test_basic.py  test_docstrings.py
tests/__snapshots__/: test_basic.ambr  test_docstrings.ambr
tests/modules/: module1.py  module2.py
