[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sphinx_sqlalchemy"
dynamic = ["version"]
description = "Sphinx extension for documenting SQLAlchemy ORMs"
authors = [{name = "Chris Sewell", email = "chrisj_sewell@hotmail.com"}]
license = {text = "MIT License"}
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Sphinx :: Extension",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["sphinx", "extension"]
requires-python = "~=3.8"
dependencies = [
    "sphinx>=5,<8",
    "sqlalchemy~=2.0",
]

[project.urls]
Homepage = "http://github.com/chrisjsewell/sphinx-sqlalchemy"
Documentation = "https://sphinx-sqlalchemy.readthedocs.io"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "sphinx-pytest",
    "syrupy~=4.0",
]
docs = ["furo"]

[tool.ruff]
line-length = 100
extend-select = ["B0", "C4", "ICN", "ISC", "N", "RUF", "SIM"]

[tool.isort]
profile = "black"
src_paths = ["sphinx_sqlalchemy", "tests"]

[tool.mypy]
show_error_codes = true
check_untyped_defs = true
scripts_are_modules = true
warn_unused_ignores = true
warn_redundant_casts = true
plugins = ["sqlalchemy.ext.mypy.plugin"]

[[tool.mypy.overrides]]
module = 'docutils.*'
ignore_missing_imports = true
