[metadata]
name = sphinx_sqlalchemy
version = attr: sphinx_sqlalchemy.__version__
description = Sphinx extension for documenting SQLAlchemy ORMs
long_description = file: README.md
long_description_content_type = text/markdown
url = http://github.com/chrisjsewell/sphinx-sqlalchemy
author = Chris Sewell
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Framework :: Sphinx :: Extension
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python Modules
keywords = sphinx
project_urls =
    Documentation = https://sphinx-sqlalchemy.readthedocs.io

[options]
packages = find:
install_requires =
    sphinx>=3,<8
    sqlalchemy~=1.4.22
python_requires = ~=3.7
include_package_data = True

[options.packages.find]
exclude =
    test*

[options.extras_require]
dev =
    pytest
    pytest-cov
docs =
    furo==2021.11.23

[flake8]
max-line-length = 100
extend-ignore = E203
